--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,15 +6,21 @@
 
       <script type="text/javascript">
          function alumnoController($scope,$http) {
-            $http.get("alumnos").success( function(response) {
-               $scope.alumnos = response;
-            });
+             $http.get("alumnos").success( function(response) {
+                 $scope.alumnos = response;
+              });
+             $http.get("cursos").success( function(response) {
+                 $scope.cursos = response;
+              });
+             $http.post("cursos", '{"codigo": "02", "nombre": "IPOO II"}').success( function(response) {
+              });
          }
       </script>
    </head>
    <body>
       <h2>AngularJS Sample Application</h2>
       <div ng-app="" ng-controller="alumnoController">
+      	<h3>Alumnos</h3>
          <table>
             <tr>
                <th>Nombres</th>
@@ -25,6 +31,17 @@
                <td>{{ alumno.nombres }}</td>
                <td>{{ alumno.apellidoPaterno }}</td>
                <td>{{ alumno.promedio }}</td>
+            </tr>
+         </table>
+         <h3>Cursos</h3>
+         <table border="1">
+            <tr>
+               <th>Codigo</th>
+               <th>Nombre</th>
+            </tr>
+            <tr ng-repeat = "curso in cursos">
+               <td>{{ curso.codigo }}</td>
+               <td>{{ curso.nombre }}</td>
             </tr>
          </table>
       </div>
